# ordinals-collections

./: .gitignore  1  123  A-Link-to-the-past-ordinals  Abstract Odyssey  Add Amazon Warriors War collection  Add GOLDRUSH  Add Ordinal Abstracts  BitScapes Season 2  Bitcoin Dinos Eggs  BitcoinMonster  BitcoinPhunks  Bitcoin_Worms  Bitmap Punks  Bitminemeta.json  Cargo.toml  Cursed_Goosinals  DEAL Ordinals-Bitcoin Benjies  GOAT Meta File.txt  Girls&Boys Ordinals  Glitched_Gold  Goat Inscription File.txt  Inscriptions.json  LICENSE  Ordinal-Doge-Genesis-Collection  OrdinalBAPP  OrdinalDooms.json  Ordinals Monkey babies  Physical Bitcoin 1000  README.md  RIBBIT_Flags_inscriptions.json  RIBBIT_Flags_meta.json  TwelveFroginscriptions.json  TwelveFrogmeta.json  Whale Ordinals  bitcoin-champions  bitcoin_worlds_inscriptions  bitcoin_worlds_inscriptions.json  bitcoin_worlds_meta.json  blockheads_inscriptions.json  (+68 more)
.circleci/: config.yml
0rdinals-cB-Team/: inscriptions.json  meta.json
123/: inscription.json  meta.json
Bitcoin_Worms/: .inscriptions
ConfusedFish/: meta.json
I LOVE U/: inscriptions.json
Kokeshi-Nakamotos/: meta.json
Merlin-Hat/: meta.json
New Collection-Ordinal Gangster/: inscriptions (1).json
Ordinal-Dooms/: inscriptions.json  meta.json
OrdinalChecks/: meta.json
Ordinals-Anime-Cats/: meta.json
PIXEL CROCOS/: inscriptions.json  meta.json
PUZzLeBuzZ/: inscriptions.json  meta.json
Recursive PEPE/: inscriptions.json  meta.json
SAMURAI-TECHNIQUES/: meta.json
SAMURAI-TECHNIQUES-ORDINALS/: meta.json
WojakOrdinals/: meta.json
src/: main.rs  (+3 more)
(+6054 files in other folders)
