[package]
name = "ordinals-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitcoin = { version = "0.29.2" }
hex = "0.4.3"
rayon = "1.6.1"
reqwest = { version = "0.11.14", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
